--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,17 +6,7 @@ services:
     restart: unless-stopped
     volumes:
       - db:/var/lib/tuwunel
-    environment:
-      TUWUNEL_SERVER_NAME: localhost # 或 127.0.0.1
-      TUWUNEL_DATABASE_PATH: /var/lib/tuwunel
-      TUWUNEL_PORT: 6167
-      TUWUNEL_MAX_REQUEST_SIZE: 20000000
-      TUWUNEL_ALLOW_REGISTRATION: "true"
-      TUWUNEL_REGISTRATION_TOKEN: "QwErTyUiOpAsDfGhJkLzXcVbNmQwEr"
-      TUWUNEL_ALLOW_FEDERATION: "true"
-      TUWUNEL_ALLOW_CHECK_FOR_UPDATES: "true"
-      TUWUNEL_TRUSTED_SERVERS: '["matrix.org"]'
-      TUWUNEL_ADDRESS: 0.0.0.0
+      - ./tuwunel.toml:/etc/tuwunel.toml:ro
     ports:
       - 6167:6167
     expose:
