--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
     volumes:
       - db:/var/lib/tuwunel
       - ./tuwunel.toml:/etc/tuwunel.toml:ro
+    environment:
+      TUWUNEL_CONFIG: /etc/tuwunel.toml
     ports:
       - 6167:6167
     expose:
