--- a/tuwunel.toml
+++ b/tuwunel.toml
@@ -24,6 +24,5 @@ registration_requires_token = true  # 强制需要 token（否则公开注册）
 
 # 多 token 定义（数组，支持多个）
 [[registration_tokens]]
-token = "team-internal"  # Token 1
-uses_allowed = 20  # 最多可以注册多少人
-# expiry_time = 1735689600000  # Unix 时间戳，过期时间（可选，毫秒）
+token = "team-internal"
+uses_allowed = 20
